# RemoteVVR

./: .gitignore  BuildCopyTest.bat  BuildCopyTestHMD2.bat  CMakeLists.txt  LICENSE  README.md
.git.old/: config  index  packed-refs
.git.old/logs/refs/remotes/origin/: HEAD
.git.old/objects/pack/: pack-c2d67214d085a0d51b1c63bb94e1c96d318390b2.idx  pack-c2d67214d085a0d51b1c63bb94e1c96d318390b2.pack
.git.old/refs/heads/: main
HMDDriver/driver_files/src/Driver/: ControllerDevice.cpp  ControllerDevice.hpp  HMDDevice.cpp  HMDDevice.hpp  VRDriver.cpp
OpenVrDriverExample/OpenVrDriverExample/include/: ControllerDriver.h  DeviceProvider.h
OpenVrDriverExample/OpenVrDriverExample/src/: ControllerDriver.cpp  DeviceProvider.cpp  HMDDriver.cpp  HMDDriver.h
OpenVrDriverExample/OpenVrDriverExample/x64/Release/: OpenVrDriverExample.dll.recipe
OpenVrDriverExample/OpenVrDriverExample/x64/Release/OpenVrDr.e9f07c0e.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenVrDriverExample.lastbuildstate  OpenVrDriverExample.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenVrDriverExample/x64/Release/: OpenVrDriverExample.exp  OpenVrDriverExample.lib
finalDriverDir/inputs/: HMDInput.txt  leftControllerInput.txt  rightControllerInput.txt
finalDriverDir/inputs/inputGUI/: SSComClientServer.js  client.html  package-lock.json  server.js
finalDriverDir/inputs/inputGUI/backupZeroFiles/: HMDInput.txt  leftControllerInput.txt  rightControllerInput.txt
finalDriverDir/myexample/resources/input/: controller_profile.json  legacy_bindings_example.json
(+1 files in other folders)
